QXGEdit - Qt XG Editor
----------------------

ChangeLog


GIT HEAD

- Added "Keywords" to desktop file; fix passing debian flags on
  configure (patches by Jaromír Mikeš, thanks).
- Fixed for some strict tests for Qt4 vs. Qt5 configure builds.

- Added application description as freedesktop.org's AppData.


0.2.0  2015-03-04  Fifth public release.

- In a glance, all GUI toolbox pages converted into tabs.

- Introducing a brand new user preference on eye-candy: cf.
  View/Options.../Display/Widget style theme.

- Most graphics now rendered with anti-aliased lines.

- A man page has beed added.

- Allow the build system to include an user specified LDFLAGS.

- Fix port origin on MIDI RPN/NRPN 14-bit controllers input.


0.1.2  2013-12-31  A fifth of a Jubilee.

- A potential memory override crash-bug was flagged by gcc 4.8,
  on something like 'iteration 16u invokes undefined behavior
  [-Waggressive-loop-optimizations]' and then finally fixed.

- More preparations for Qt5 configure build.

- Primeval support for MIDI RPN/NRPN 14-bit controllers input.

- Fixed an incremental value stickiness, which were affecting
  some parameters step changes from up/down spin-box widgets
  (eg. Master Tune).

- Preparations for Qt5 migration.

- Skulpture style plugin is now deployed to a rather standard
  location on install (default: PREFIX/qt4/plugins/styles).

- Uservoice name preset drop-down list is now sorted.

- MIDI note names and their respective octave numbers are now
  compliant with the ISO standard where middle C (60) is now C4
  (was C3).

- Added include <unistd.h> to shut up gcc 4.7 build failures.

- Make(ing) -jN parallel builds now available for the masses.

- Updated to recent Skulpture style version 2.4.0.

- Fixed Makefile.in handling of installation directories to the
  configure script eg. --datadir.


0.1.1  2011-09-17  Third public release.

- Make sure Uservoice elements are selected only when available.
